# make87-python

./: .pre-commit-config.yaml  DEPRECATION.md  README.md  generate_models.sh  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: index.md  mkdocs.yml  requirements.txt
docs/scripts/: gen_ref_pages.py
docs/src/assets/: extra.css
docs/src/scripts/: gen_ref_pages.py
make87/: __init__.py  config.py  endpoints.py  host.py  storage.py  topics.py  utils.py
make87/encodings/: yaml_.py
make87/encodings/protobuf/: pb6.py
make87/handlers/: logging.py  stderr.py  stdout.py
make87/interfaces/: __init__.py  base.py
make87/interfaces/rerun/: __init__.py  interface.py
make87/interfaces/zenoh/: __init__.py  adapter.py  interface.py  model.py  protocol.py
make87/internal/models/: application_env_config.py
make87/internal/schemas/: application_env_config.openapi.json  application_env_config.schema.json
make87/models/: __init__.py  application_env_config.py
make87/peripherals/: __init__.py  base.py  factory.py  manager.py
make87/peripherals/camera/: __init__.py
make87/peripherals/codec/: __init__.py
make87/peripherals/generic_device/: __init__.py
make87/peripherals/gpio/: __init__.py
make87/peripherals/gpu/: __init__.py
make87/peripherals/i2c/: __init__.py
make87/peripherals/isp/: __init__.py
make87/peripherals/other/: __init__.py
make87/protocols/: base.py
make87/schemas/: application_env_config.schema.json
schemas/: application_env_config.openapi.json
tests/integration/: test_pub_sub.py  test_req_prv.py
(+54 files in other folders)
